I test if the function for create user in User class work

--- a/REST-API/composer.json
+++ b/REST-API/composer.json
@@ -11,7 +11,8 @@
             "Configuration\\": "Configuration/",
             "Exception\\": "Exception/",
             "Api\\": "Api/",
-            "Class\\": "Class/"
+            "Class\\": "Class/",
+            "Test\\":"Test/"
         }
     },
     "require-dev": {
